airflow/logs/dag_id=csv_etl_pipeline/run_id=manual__2025-03-11T11:18:19.700044+00:00/task_id=load_task/attempt=1.log
[2025-03-11T11:18:26.592+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: csv_etl_pipeline.load_task manual__2025-03-11T11:18:19.700044+00:00 [queued]>
[2025-03-11T11:18:26.606+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: csv_etl_pipeline.load_task manual__2025-03-11T11:18:19.700044+00:00 [queued]>
[2025-03-11T11:18:26.607+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 1
[2025-03-11T11:18:26.631+0000] {taskinstance.py:1327} INFO - Executing <Task(PythonOperator): load_task> on 2025-03-11 11:18:19.700044+00:00
[2025-03-11T11:18:26.639+0000] {standard_task_runner.py:57} INFO - Started process 737 to run task
[2025-03-11T11:18:26.646+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'csv_etl_pipeline', 'load_task', 'manual__2025-03-11T11:18:19.700044+00:00', '--job-id', '37', '--raw', '--subdir', 'DAGS_FOLDER/etl.py', '--cfg-path', '/tmp/tmp641xvuen']
[2025-03-11T11:18:26.646+0000] {standard_task_runner.py:85} INFO - Job 37: Subtask load_task
[2025-03-11T11:18:26.722+0000] {task_command.py:410} INFO - Running <TaskInstance: csv_etl_pipeline.load_task manual__2025-03-11T11:18:19.700044+00:00 [running]> on host 11da0919092a
[2025-03-11T11:18:26.839+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='csv_etl_pipeline' AIRFLOW_CTX_TASK_ID='load_task' AIRFLOW_CTX_EXECUTION_DATE='2025-03-11T11:18:19.700044+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-03-11T11:18:19.700044+00:00'
[2025-03-11T11:18:27.090+0000] {logging_mixin.py:149} INFO - ✅ Données chargées dans output_data.csv
[2025-03-11T11:18:28.841+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 181, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 198, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl.py", line 61, in load_data
    ''')
psycopg2.errors.SyntaxError: syntax error at or near "PRIMARY"
LINE 3:             Id_vente PRIMARY KEY,
                             ^

[2025-03-11T11:18:28.864+0000] {taskinstance.py:1350} INFO - Marking task as FAILED. dag_id=csv_etl_pipeline, task_id=load_task, execution_date=20250311T111819, start_date=20250311T111826, end_date=20250311T111828
[2025-03-11T11:18:28.895+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 37 for task load_task (syntax error at or near "PRIMARY"
LINE 3:             Id_vente PRIMARY KEY,
                             ^
; 737)
[2025-03-11T11:18:28.948+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2025-03-11T11:18:28.981+0000] {taskinstance.py:2651} INFO - 0 downstream tasks scheduled from follow-on schedule check
